--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.thymeleaf.content-type=text/html
 server.port=8001 
 
 #JDBC
-spring.datasource.url=jdbc:mysql://localhost:3306/micro_db?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_101?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=qawsed123
 
